--- a/contact.css
+++ b/contact.css
@@ -121,6 +121,8 @@ nav {
 
 .page-title {
     text-align: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
     width: 100%;
     display: flex;
     flex-direction: column;
