--- a/apropos.css
+++ b/apropos.css
@@ -68,6 +68,23 @@ nav {
   color: #0054ad;
 }
 
+.nav-links li a.active {
+  color: #30ce27; 
+  font-weight: bold;
+  position: relative;
+}
+
+.nav-links li a.active::after {
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #30ce27;
+  border-radius: 2px;
+}
+
 .cta {
   flex-shrink: 1;
   display: flex;
