--- a/contact.css
+++ b/contact.css
@@ -450,6 +450,11 @@ footer p {
   .contact-layout {
       flex-direction: column;
   }
+
+  .map-placeholder {
+    height: 200px;
+    margin-top: 10px;
+}
   
   .contact-info {
       width: 100%;
