--- a/apropos.css
+++ b/apropos.css
@@ -104,7 +104,40 @@ nav {
   display: none;
 }
 
-/* --- Sections --- */
+.page-title {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.page-title h1 {
+    font-size: 42px;
+    color:  #007bff;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.title-underline {
+    width: 120px;
+    height: 5px;
+    margin: 12px auto 0;
+    background: linear-gradient(90deg, #1c95eb, #30ce27);
+    border-radius: 5px;
+
+    transform: scaleX(0);
+    animation: underline-grow 0.8s ease-out forwards;
+}
+
+@keyframes underline-grow {
+    to {
+        transform: scaleX(1);
+    }
+}
+
 section {
   padding: 60px 6%;
 }
