--- a/apropos.css
+++ b/apropos.css
@@ -166,8 +166,7 @@ h2::after {
   flex-wrap: nowrap;
   align-items: stretch; 
   width: 100%;
-  margin-left: 60px;
-  margin-right: 60px;
+  margin: 30px 60px;
 }
 
 /* Première ligne : image + texte */
