--- a/apropos.css
+++ b/apropos.css
@@ -160,6 +160,13 @@ h2::after {
   border-radius: 20px;
 }
 
+.apropos-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0; 
+}
+
 .apropos-header .apropos-row {
   display: flex;
   gap: 30px;
@@ -167,6 +174,7 @@ h2::after {
   align-items: stretch; 
   width: 90%;
   margin: 30px 0px;
+  justify-content: center;
 }
 
 /* Première ligne : image + texte */
