--- a/apropos.css
+++ b/apropos.css
@@ -227,15 +227,17 @@ h2::after {
 }
 
 .apropos-video {
-  flex: 0 0 auto;
-  max-width: 900px; 
+  flex: 1 1 60%;  
+  max-width: 900px;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .apropos-video iframe {
   width: 100%;
-  max-width: 900px; 
-  height: 500px; 
+  max-width: 900px;
+  height: 500px;
   border-radius: 16px;
   border: none;
 }
