--- a/apropos.css
+++ b/apropos.css
@@ -167,15 +167,16 @@ h2::after {
   padding: 30px 0; 
 }
 
-.apropos-header .apropos-row {
+.apropos-row {
   display: flex;
   gap: 30px;
-  flex-wrap: nowrap;
-  align-items: stretch; 
-  width: 90%;
-  margin: 30px 0px;
+  flex-wrap: nowrap; 
+  align-items: stretch;
   justify-content: center;
+  width: 90%;
+  margin: 30px 0;
 }
+
 
 /* Première ligne : image + texte */
 .apropos-image {
@@ -223,21 +224,17 @@ h2::after {
 
 .text-part2 {
   flex: 1; 
-  font-size: clamp(1rem, 2vw, 1.1rem);
+  min-width: 300px; 
 }
 
 .apropos-video {
-  flex: 1 1 60%;  
-  max-width: 900px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  flex: 1.2; 
+  min-width: 400px;  
 }
 
 .apropos-video iframe {
-  width: 100%;
-  max-width: 900px;
-  height: 500px;
+  width: 100%; 
+  height: 100%; 
   border-radius: 16px;
   border: none;
 }
