--- a/apropos.css
+++ b/apropos.css
@@ -253,15 +253,13 @@ h2::after {
 }
 
 .text-part2 {
-  flex: 1; 
-  min-width: 300px; 
+  flex: 1;
+  overflow: hidden; 
 }
 
 .apropos-video {
+  flex: 1;
   position: relative;
-  width: 100%;
-  padding-top: 56.25%;
-  overflow: hidden;
 }
 
 .apropos-video iframe {
@@ -270,10 +268,9 @@ h2::after {
   left: 0;
   width: 100%;
   height: 100%;
+  border-radius: 16px;
   border: none;
-}
-
-
+  
 .equipe-grid {
   display: flex;
   justify-content: center;
