--- a/services.css
+++ b/services.css
@@ -971,6 +971,21 @@ footer p {
     max-width: 90%;
   }
 
+  cta-container {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    gap: 20px;
+    margin: 0 auto;
+    padding: 0 10px;
+  }
+
+  .cta-card {
+    width: 100%;       /* occupe presque toute la largeur de l'écran */
+    max-width: 300px;  /* limite la largeur pour ne pas être trop large */
+    text-align: center; /* centre le texte à l'intérieur de chaque carte */
+  }
+
   .logement-card {
     min-width: 200px;
     max-width: 280px;
